crates/plotnik-lib/tests/05-typegen/definitions/error_captured_recursive_multi_node_def.txt
A = {(expression_statement) (statement_block (A))?}
Q = (program (A) @x)
==== diagnostics ====
error: the referenced definition doesn't match exactly one node, so there is no single node to bind
 --> query.ptk:2:14
  |
1 | A = {(expression_statement) (statement_block (A))?}
  |     ----------------------------------------------- defined here
2 | Q = (program (A) @x)
  |              ^^^
  |
help: capture nodes inside the definition, or drop this capture
